Fix the bug causing home page to be too wide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,9 +48,7 @@ a img {
 #introduction {
     background-color: #deebdd;
     background-image: linear-gradient(315deg, #deebdd 0%, #bbdbbe 74%);
-    border-radius: 25px;
-    box-shadow: 0 0 10px 5px;
-    margin-top: 10px;
+    box-shadow: rgba(0, 0, 0, 0.75) 0px 2px 2px;
 }
     
 .introduction-heading { 
@@ -92,7 +90,7 @@ a img {
 .visitor-testimonials-section {
     width: 100%;
     padding: 30px 0px 10px 0px;
-    margin: 15px 15px 60px 15px; 
+    margin: 15px 0px 60px 0px; 
     background-color: #ffffff;
 }
 
